// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> _isMultiline should render a input tag if _isMultiline is false(default) 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dygcup"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 jZVNzB Spaceweb__Space-sc-1fdjx97-0 eLLbci Sizeweb__Size-ej4iby-0 EwLMO"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Labelweb__FloatView-sc-1f88p6l-0 koRNps Spaceweb__Space-sc-1fdjx97-0 hamRTl"
            >
              <label
                class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 czMOAs"
                color="shade.980"
                data-testid="ds-text"
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 iVsA-DI Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <input
                class="TextInputweb__StyledInput-o6w7xm-1 labwAz Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 jcSNya Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-input"
                id="sample-id"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> _isMultiline should render a textarea tag if _isMultiline is true 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dygcup"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 jZVNzB Spaceweb__Space-sc-1fdjx97-0 eLLbci Sizeweb__Size-ej4iby-0 EwLMO"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Labelweb__FloatView-sc-1f88p6l-0 koRNps Spaceweb__Space-sc-1fdjx97-0 hamRTl"
            >
              <label
                class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 czMOAs"
                color="shade.980"
                data-testid="ds-text"
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 iVsA-DI Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <textarea
                class="TextInputweb__StyledInput-o6w7xm-1 labwAz Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 jcSNya Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-input"
                id="sample-id"
                placeholder="Enter text here"
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> default should render a TextInput with default props 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dygcup"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 jZVNzB Spaceweb__Space-sc-1fdjx97-0 eLLbci Sizeweb__Size-ej4iby-0 EwLMO"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Labelweb__FloatView-sc-1f88p6l-0 koRNps Spaceweb__Space-sc-1fdjx97-0 hamRTl"
            >
              <label
                class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 czMOAs"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 iVsA-DI Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <input
                class="TextInputweb__StyledInput-o6w7xm-1 labwAz Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 jcSNya Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-input"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> disabled should render a disabled TextInput 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 eBfxee"
          disabled=""
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 jZVNzB Spaceweb__Space-sc-1fdjx97-0 eLLbci Sizeweb__Size-ej4iby-0 EwLMO"
            disabled=""
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Labelweb__FloatView-sc-1f88p6l-0 koRNps Spaceweb__Space-sc-1fdjx97-0 hamRTl"
              style="transform: translate(-NaNpx,-0px);"
            >
              <label
                class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 Kszwi"
                color="shade.980"
                data-testid="ds-text"
                disabled=""
                for="sample-id"
                value="some value"
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 iVsA-DI Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <input
                class="TextInputweb__StyledInput-o6w7xm-1 cRCkbU Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 jcSNya Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-input"
                disabled=""
                id="sample-id"
                placeholder="Enter text here"
                type="text"
                value="some value"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
            disabled=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> errorText should render a TextInput with error text if errorText is provided as prop 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dUTyeY"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 jZVNzB Spaceweb__Space-sc-1fdjx97-0 eLLbci Sizeweb__Size-ej4iby-0 EwLMO"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Labelweb__FloatView-sc-1f88p6l-0 koRNps Spaceweb__Space-sc-1fdjx97-0 hamRTl"
            >
              <label
                class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 czMOAs"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 iVsA-DI Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <input
                class="TextInputweb__StyledInput-o6w7xm-1 labwAz Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 jcSNya Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-input"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
        <div
          class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 lgxseS"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 epKApN Spaceweb__Space-sc-1fdjx97-0 lbtmWm"
          >
            <div
              class="Textweb__Text-sc-1qdvl51-0 hLYWLn"
              color="negative.900"
              data-testid="ds-text"
            >
              This is error text
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> errorText with maxLength should render a TextInput with character count as fraction 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dUTyeY"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 jZVNzB Spaceweb__Space-sc-1fdjx97-0 eLLbci Sizeweb__Size-ej4iby-0 EwLMO"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Labelweb__FloatView-sc-1f88p6l-0 koRNps Spaceweb__Space-sc-1fdjx97-0 hamRTl"
            >
              <label
                class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 czMOAs"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 iVsA-DI Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <input
                class="TextInputweb__StyledInput-o6w7xm-1 labwAz Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 jcSNya Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-input"
                maxlength="10"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
        <div
          class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 lgxseS"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 epKApN Spaceweb__Space-sc-1fdjx97-0 lbtmWm"
          >
            <div
              class="Textweb__Text-sc-1qdvl51-0 hLYWLn"
              color="negative.900"
              data-testid="ds-text"
            >
              This is error text
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 kVbtsq Spaceweb__Space-sc-1fdjx97-0 eZHofG"
          >
            <div
              class="Textweb__Text-sc-1qdvl51-0 bJUMcv"
              color="shade.950"
              data-testid="ds-text"
            >
              0/10
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> focus should have focus when input is focused 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dygcup"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 jZVNzB Spaceweb__Space-sc-1fdjx97-0 eLLbci Sizeweb__Size-ej4iby-0 EwLMO"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Labelweb__FloatView-sc-1f88p6l-0 koRNps Spaceweb__Space-sc-1fdjx97-0 hamRTl"
              style="transform: translate(-NaNpx,-0px);"
            >
              <label
                class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 fDWmFF"
                color="shade.980"
                data-testid="ds-text"
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 iVsA-DI Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <input
                class="TextInputweb__StyledInput-o6w7xm-1 labwAz Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 jcSNya Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-input"
                id="sample-id"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> helpText should render a TextInput with help text if helpText is provided as prop 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dygcup"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 jZVNzB Spaceweb__Space-sc-1fdjx97-0 eLLbci Sizeweb__Size-ej4iby-0 EwLMO"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Labelweb__FloatView-sc-1f88p6l-0 koRNps Spaceweb__Space-sc-1fdjx97-0 hamRTl"
            >
              <label
                class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 czMOAs"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 iVsA-DI Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <input
                class="TextInputweb__StyledInput-o6w7xm-1 labwAz Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 jcSNya Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-input"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
        <div
          class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 lgxseS"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 epKApN Spaceweb__Space-sc-1fdjx97-0 lbtmWm"
          >
            <div
              class="Textweb__Text-sc-1qdvl51-0 bJUMcv"
              color="shade.950"
              data-testid="ds-text"
            >
              This is help text
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> helpText with maxLength should render a TextInput with character count as fraction 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dygcup"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 jZVNzB Spaceweb__Space-sc-1fdjx97-0 eLLbci Sizeweb__Size-ej4iby-0 EwLMO"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Labelweb__FloatView-sc-1f88p6l-0 koRNps Spaceweb__Space-sc-1fdjx97-0 hamRTl"
            >
              <label
                class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 czMOAs"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 iVsA-DI Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <input
                class="TextInputweb__StyledInput-o6w7xm-1 labwAz Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 jcSNya Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-input"
                maxlength="10"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
        <div
          class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 lgxseS"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 epKApN Spaceweb__Space-sc-1fdjx97-0 lbtmWm"
          >
            <div
              class="Textweb__Text-sc-1qdvl51-0 bJUMcv"
              color="shade.950"
              data-testid="ds-text"
            >
              This is help text
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 kVbtsq Spaceweb__Space-sc-1fdjx97-0 eZHofG"
          >
            <div
              class="Textweb__Text-sc-1qdvl51-0 bJUMcv"
              color="shade.950"
              data-testid="ds-text"
            >
              0/10
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> iconLeft should render a TextInput with iconLeft 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dygcup"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 jZVNzB Spaceweb__Space-sc-1fdjx97-0 eLLbci Sizeweb__Size-ej4iby-0 EwLMO"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Labelweb__FloatView-sc-1f88p6l-0 koRNps Spaceweb__Space-sc-1fdjx97-0 hamRTl"
            >
              <label
                class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 czMOAs"
                color="shade.980"
                data-testid="ds-text"
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 iVsA-DI Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <svg
                class="Flexweb__Flex-sc-10onnkk-0 dAAVna Spaceweb__Space-sc-1fdjx97-0 eCotpg"
                data-testid="ds-icon"
                fill="rgba(22, 47, 86, 0.38)"
                height="16"
                viewBox="0 0 24 24"
                width="16"
              >
                <path
                  d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-18A10 10 0 002 12a10 10 0 0010 10 10 10 0 0010-10A10 10 0 0012 2m-1 15h2v-6h-2v6z"
                />
              </svg>
              <input
                class="TextInputweb__StyledInput-o6w7xm-1 labwAz Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 jcSNya Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-input"
                id="sample-id"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> iconRight should render a TextInput with iconRight 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dygcup"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 jZVNzB Spaceweb__Space-sc-1fdjx97-0 eLLbci Sizeweb__Size-ej4iby-0 EwLMO"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Labelweb__FloatView-sc-1f88p6l-0 koRNps Spaceweb__Space-sc-1fdjx97-0 hamRTl"
            >
              <label
                class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 czMOAs"
                color="shade.980"
                data-testid="ds-text"
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 iVsA-DI Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <input
                class="TextInputweb__StyledInput-o6w7xm-1 labwAz Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 jcSNya Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-input"
                id="sample-id"
                placeholder="Enter text here"
                type="text"
                value=""
              />
              <svg
                class="Flexweb__Flex-sc-10onnkk-0 dAAVna Spaceweb__Space-sc-1fdjx97-0 dhtevg"
                data-testid="ds-icon"
                fill="rgba(22, 47, 86, 0.38)"
                height="16"
                viewBox="0 0 24 24"
                width="16"
              >
                <path
                  d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-18A10 10 0 002 12a10 10 0 0010 10 10 10 0 0010-10A10 10 0 0012 2m-1 15h2v-6h-2v6z"
                />
              </svg>
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> label should render a TextInput with labelPosition on left and variant filled 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <label
        class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 czMOAs Spaceweb__Space-sc-1fdjx97-0 hitLhv"
        color="shade.980"
        data-testid="ds-text"
        for="sample-id"
        id="sample-id"
        value=""
        width="medium"
      >
        Sample Label
      </label>
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dygcup"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 cTqWdc Spaceweb__Space-sc-1fdjx97-0 iDLaIG Sizeweb__Size-ej4iby-0 TfuCc"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 iVsA-DI Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <input
                class="TextInputweb__StyledInput-o6w7xm-1 dRwNob Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 cCzXUG Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-input"
                id="sample-id"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> label should render a TextInput with labelPosition on top(default) and variant filled 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <label
      class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 dGSaIV Spaceweb__Space-sc-1fdjx97-0 dvcLZx"
      color="shade.980"
      data-testid="ds-text"
      for="sample-id"
      id="sample-id"
      value=""
      width="medium"
    >
      Sample Label
    </label>
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dygcup"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 cTqWdc Spaceweb__Space-sc-1fdjx97-0 iDLaIG Sizeweb__Size-ej4iby-0 TfuCc"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 iVsA-DI Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <input
                class="TextInputweb__StyledInput-o6w7xm-1 dRwNob Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 cCzXUG Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-input"
                id="sample-id"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> label should render a TextInput with labelPosition on top(default) and variant outlined(default) 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dygcup"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 jZVNzB Spaceweb__Space-sc-1fdjx97-0 eLLbci Sizeweb__Size-ej4iby-0 EwLMO"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Labelweb__FloatView-sc-1f88p6l-0 koRNps Spaceweb__Space-sc-1fdjx97-0 hamRTl"
            >
              <label
                class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 czMOAs"
                color="shade.980"
                data-testid="ds-text"
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 iVsA-DI Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <input
                class="TextInputweb__StyledInput-o6w7xm-1 labwAz Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 jcSNya Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-input"
                id="sample-id"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> prefix should render a TextInput with prefix 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dygcup"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 jZVNzB Spaceweb__Space-sc-1fdjx97-0 eLLbci Sizeweb__Size-ej4iby-0 EwLMO"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Labelweb__FloatView-sc-1f88p6l-0 koRNps Spaceweb__Space-sc-1fdjx97-0 hamRTl"
            >
              <label
                class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 czMOAs"
                color="shade.980"
                data-testid="ds-text"
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 iVsA-DI Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <div
                class="Textweb__Text-sc-1qdvl51-0 jhtmmG Spaceweb__Space-sc-1fdjx97-0 eCotpg"
                color="shade.950"
                data-testid="ds-text"
              >
                ₹
              </div>
              <input
                class="TextInputweb__StyledInput-o6w7xm-1 labwAz Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 jcSNya Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-input"
                id="sample-id"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> suffix should render a TextInput with suffix 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dygcup"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 jZVNzB Spaceweb__Space-sc-1fdjx97-0 eLLbci Sizeweb__Size-ej4iby-0 EwLMO"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Labelweb__FloatView-sc-1f88p6l-0 koRNps Spaceweb__Space-sc-1fdjx97-0 hamRTl"
            >
              <label
                class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 czMOAs"
                color="shade.980"
                data-testid="ds-text"
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 iVsA-DI Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <input
                class="TextInputweb__StyledInput-o6w7xm-1 labwAz Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 jcSNya Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-input"
                id="sample-id"
                placeholder="Enter text here"
                type="text"
                value=""
              />
              <div
                class="Textweb__Text-sc-1qdvl51-0 jhtmmG Spaceweb__Space-sc-1fdjx97-0 dhtevg"
                color="shade.950"
                data-testid="ds-text"
              >
                ₹
              </div>
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> variant should render a filled variant with default props 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <label
      class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 dGSaIV Spaceweb__Space-sc-1fdjx97-0 dvcLZx"
      color="shade.980"
      data-testid="ds-text"
      value=""
      width="medium"
    >
      Label
    </label>
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dygcup"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 cTqWdc Spaceweb__Space-sc-1fdjx97-0 iDLaIG Sizeweb__Size-ej4iby-0 TfuCc"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 iVsA-DI Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <input
                class="TextInputweb__StyledInput-o6w7xm-1 dRwNob Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 cCzXUG Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-input"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> variant should render a outlined variant with default props 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dygcup"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 jZVNzB Spaceweb__Space-sc-1fdjx97-0 eLLbci Sizeweb__Size-ej4iby-0 EwLMO"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Labelweb__FloatView-sc-1f88p6l-0 koRNps Spaceweb__Space-sc-1fdjx97-0 hamRTl"
            >
              <label
                class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 czMOAs"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 iVsA-DI Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <input
                class="TextInputweb__StyledInput-o6w7xm-1 labwAz Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 jcSNya Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-input"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> width should render a TextInput with auto width 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 dzLbld"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dygcup"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 jZVNzB Spaceweb__Space-sc-1fdjx97-0 eLLbci Sizeweb__Size-ej4iby-0 EwLMO"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Labelweb__FloatView-sc-1f88p6l-0 koRNps Spaceweb__Space-sc-1fdjx97-0 hamRTl"
            >
              <label
                class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 czMOAs"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="auto"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 cCIbrO Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <input
                class="TextInputweb__StyledInput-o6w7xm-1 labwAz Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 jcSNya Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-input"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> width should render a TextInput with medium(default) width 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dygcup"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 jZVNzB Spaceweb__Space-sc-1fdjx97-0 eLLbci Sizeweb__Size-ej4iby-0 EwLMO"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Labelweb__FloatView-sc-1f88p6l-0 koRNps Spaceweb__Space-sc-1fdjx97-0 hamRTl"
            >
              <label
                class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 czMOAs"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 iVsA-DI Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <input
                class="TextInputweb__StyledInput-o6w7xm-1 labwAz Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 jcSNya Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-input"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> width should render a TextInput with small width 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 gpvXtk"
  >
    <div
      class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 jxFoYH"
    >
      <div
        class="Viewweb__View-sc-11897uc-0 kVbtsq Flexweb__Flex-sc-10onnkk-0 ljidjK"
      >
        <div
          class="Viewweb__View-sc-11897uc-0 TextInputweb__InteractionContainer-o6w7xm-3 dygcup"
        >
          <div
            class="Viewweb__View-sc-11897uc-0 TextInputweb__FillContainer-o6w7xm-2 jZVNzB Spaceweb__Space-sc-1fdjx97-0 eLLbci Sizeweb__Size-ej4iby-0 EwLMO"
          >
            <div
              class="Viewweb__View-sc-11897uc-0 Labelweb__FloatView-sc-1f88p6l-0 koRNps Spaceweb__Space-sc-1fdjx97-0 hamRTl"
            >
              <label
                class="Textweb__Text-sc-1qdvl51-0 Labelweb__StyledText-sc-1f88p6l-1 czMOAs"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="small"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-11897uc-0 TextInputweb__InputContainer-o6w7xm-0 moVst Sizeweb__Size-ej4iby-0 FYrrJ Flexweb__Flex-sc-10onnkk-0 cQZIzK"
            >
              <input
                class="TextInputweb__StyledInput-o6w7xm-1 labwAz Sizeweb__Size-ej4iby-0 byuPEj Spaceweb__Space-sc-1fdjx97-0 jcSNya Flexweb__Flex-sc-10onnkk-0 epKApN"
                data-testid="ds-text-input"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-11897uc-0 Lineweb__Line-sc-8m68gf-0 bZlmIV"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
